nowrap fix 3

--- a/sass/main.css
+++ b/sass/main.css
@@ -1212,6 +1212,11 @@ a {
     flex-wrap: nowrap;
   }
 }
+@media all and (min-width: 992px) {
+  .token4sale {
+    flex-wrap: nowrap;
+  }
+}
 .token4sale li {
   width: 40%;
   margin: 15px;
@@ -1219,6 +1224,12 @@ a {
 @media all and (min-width: 768px) and (max-width: 992px) {
   .token4sale li {
     width: 23%;
+    flex-wrap: nowrap;
+  }
+}
+@media all and (min-width: 992px) {
+  .token4sale li {
+    flex-wrap: nowrap;
   }
 }
 
